# trademe

./: .dev.vars.example  .env.example  .gitignore  AGENTS.md  Dockerfile  TODO.md  drizzle.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
.claude/rules/: subagent.md
.comments/: collab-comments.json
.github/workflows/: deploy-skills.yml  deploy.yml  pr-cleanup.yml  pr.yml  skills.yml
agent/sandbox/analysis/sdk/: pyproject.toml
agent/sandbox/analysis/sdk/src/pholio_sdk/: __init__.py
agent/sandbox/analysis/sdk/src/trademe_sdk/: __init__.py
docs/: IDEA.md  agent_design.md  ai_capability.md  architecture.md  auth_plan.md  competitors.md  dashboard_design.md  data_ingestion.md  market_landscape.md  regulatory.md  stock_data_apis.md  target_user.md  v0.md
drizzle/: 0000_init_test_user.sql  0001_add_trade.sql  0002_drop_test_user.sql  0003_add_market_tables.sql  0004_nostalgic_chamber.sql  0005_smart_songbird.sql  0006_harsh_killer_shrike.sql  0006_orange_human_torch.sql  0007_left_bloodstorm.sql  0008_robust_thunderbolts.sql  0009_brown_the_twelve.sql  0010_handy_tinkerer.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  (+1 more)
scripts/: generate-skills-manifest.ts  seed-profiles.ts  test-slip-extraction.ts  upload-skills-to-r2.ts
skills/: manifest.json
src/: routeTree.gen.ts  router.tsx  start.ts  styles.css
(+171 files in other folders)
